Fix h2 animation on mobile devices.

--- a/css/style.css
+++ b/css/style.css
@@ -523,7 +523,7 @@ footer {
 }
 
 #flip {
-  height: 100px;
+  height: 75px;
   overflow: hidden;
 }
 
@@ -531,7 +531,7 @@ footer {
   color: #fff;
   padding: 4px 12px;
   height: 45px;
-  margin-bottom: 45px;
+  margin-bottom: 0px;
   display: inline-block;
 }
 
@@ -540,48 +540,21 @@ footer {
   animation: show 8s linear infinite;
 }
 
-@-webkit-keyframes show {
-  0% {
-    margin-top: -270px;
-  }
-  5% {
-    margin-top: -180px;
-  }
-  33% {
-    margin-top: -180px;
-  }
-  38% {
-    margin-top: -90px;
-  }
-  66% {
-    margin-top: -90px;
-  }
-  71% {
-    margin-top: 0px;
-  }
-  99.99% {
-    margin-top: 0px;
-  }
-  100% {
-    margin-top: -270px;
-  }
-}
-
 @keyframes show {
   0% {
-    margin-top: -270px;
+    margin-top: -160px;
   }
   5% {
-    margin-top: -180px;
+    margin-top: -130px;
   }
   33% {
-    margin-top: -180px;
+    margin-top: -130px;
   }
   38% {
-    margin-top: -90px;
+    margin-top: -65px;
   }
   66% {
-    margin-top: -90px;
+    margin-top: -65px;
   }
   71% {
     margin-top: 0px;
@@ -590,11 +563,149 @@ footer {
     margin-top: 0px;
   }
   100% {
-    margin-top: -270px;
+    margin-top: -160px;
   }
 }
 
-@media (min-width: 900px) {
+@media (min-width: 500px) {
+  #container {
+    font-size: var(--fs-700);
+    font-weight: var(--fw-bold);
+    position: static;
+    width: 100%;
+    bottom: 45%;
+    display: block;
+    font-family: var(--ff-primary-100);
+  }
+
+  #flip {
+    height: 75px;
+    overflow: hidden;
+  }
+
+  #flip > div > div {
+    color: #fff;
+    padding: 4px 12px;
+    height: 45px;
+    margin-bottom: 0px;
+    display: inline-block;
+  }
+
+  #flip div:first-child {
+    -webkit-animation: show 8s linear infinite;
+    animation: show 8s linear infinite;
+  }
+
+  @keyframes show {
+    0% {
+      margin-top: -160px;
+    }
+    5% {
+      margin-top: -130px;
+    }
+    33% {
+      margin-top: -130px;
+    }
+    38% {
+      margin-top: -65px;
+    }
+    66% {
+      margin-top: -65px;
+    }
+    71% {
+      margin-top: 0px;
+    }
+    99.99% {
+      margin-top: 0px;
+    }
+    100% {
+      margin-top: -160px;
+    }
+  }
+}
+
+@media (min-width: 960px) {
+  #container {
+    font-size: var(--fs-700);
+    font-weight: var(--fw-bold);
+    position: static;
+    width: 100%;
+    bottom: 45%;
+    display: block;
+    font-family: var(--ff-primary-100);
+  }
+
+  #flip {
+    height: 100px;
+    overflow: hidden;
+  }
+
+  #flip > div > div {
+    color: #fff;
+    padding: 4px 12px;
+    height: 45px;
+    margin-bottom: 45px;
+    display: inline-block;
+  }
+
+  #flip div:first-child {
+    -webkit-animation: show 8s linear infinite;
+    animation: show 8s linear infinite;
+  }
+
+  @-webkit-keyframes show {
+    0% {
+      margin-top: -270px;
+    }
+    5% {
+      margin-top: -180px;
+    }
+    33% {
+      margin-top: -180px;
+    }
+    38% {
+      margin-top: -90px;
+    }
+    66% {
+      margin-top: -90px;
+    }
+    71% {
+      margin-top: 0px;
+    }
+    99.99% {
+      margin-top: 0px;
+    }
+    100% {
+      margin-top: -270px;
+    }
+  }
+
+  @keyframes show {
+    0% {
+      margin-top: -270px;
+    }
+    5% {
+      margin-top: -180px;
+    }
+    33% {
+      margin-top: -180px;
+    }
+    38% {
+      margin-top: -90px;
+    }
+    66% {
+      margin-top: -90px;
+    }
+    71% {
+      margin-top: 0px;
+    }
+    99.99% {
+      margin-top: 0px;
+    }
+    100% {
+      margin-top: -270px;
+    }
+  }
 }
 
 /* NAV BAR */
@@ -740,8 +851,8 @@ footer {
 .brand-title {
   font-family: consolas;
   font-size: var(--fs-600);
-  color: var(--clr-neutral-200);
-  font-weight: var(--fw-medium);
+  color: var(--clr-neutral-300);
+  font-weight: var(--fw-bold);
 }
 
 .navbar-links a {
@@ -760,7 +871,6 @@ footer {
   font-family: var(--ff-primary-200);
   font-size: var(--fs-500);
   font-weight: var(--fw-bold);
-
   cursor: pointer;
   transition: all 0.3s ease;
   position: relative;
